compiler/tests/ar/errors/unused_mut.salam
// لغة: العربية
// توقع: E069
دالة الرئیسیة:
    متغير عمر := 50
    اطبع عمر
نهاية
